--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -290,23 +290,10 @@
     <Compile Include="ActionFramework\ELearningLab\ELearningTaskPane\ELearningImageHandler.cs" />
     <Compile Include="ActionFramework\ELearningLab\ELearningTaskPane\ELearningLabelHandler.cs" />
     <Compile Include="ActionFramework\ELearningLab\ELearningTaskPane\ELearningSupertipHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\AnimateNewLines\AnimateNewLinesActionHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\AnimateNewLines\AnimateNewLinesEnabledHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\AnimateNewLines\AnimateNewLinesImageHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\AnimateNewLines\AnimateNewLinesLabelHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\AnimateNewLines\AnimateNewLinesSupertipHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\HighlightDifference\HighlightDifferenceActionHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\HighlightDifference\HighlightDifferenceEnabledHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\HighlightDifference\HighlightDifferenceImageHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\HighlightDifference\HighlightDifferenceLabelHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\HighlightDifference\HighlightDifferenceSupertipHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabMenu\LiveCodingLabMenuImageHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabMenu\LiveCodingLabMenuLabelHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabMenu\LiveCodingLabMenuSupertipHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabSettings\LiveCodingLabSettingsActionHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabSettings\LiveCodingLabSettingsImageHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabSettings\LiveCodingLabSettingsLabelHandler.cs" />
-    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabSettings\LiveCodingLabSettingsSupertipHandler.cs" />
+    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabActionHandler.cs" />
+    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabImageHandler.cs" />
+    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabLabelHandler.cs" />
+    <Compile Include="ActionFramework\LiveCodingLab\LiveCodingLabSupertipHandler.cs" />
     <Compile Include="ActionFramework\NarrationsLab\TempStorage.cs" />
     <Compile Include="ActionFramework\PictureSlidesLab\PictureSlidesEnabledHandler.cs" />
     <Compile Include="ActionFramework\ShapesLab\ShapesLabMenu\ShapesLabMenuImageHandler.cs" />
@@ -827,10 +814,21 @@
     <Compile Include="ColorTheme\DesignTheme.cs" />
     <Compile Include="LiveCodingLab\AnimateNewLines.cs" />
     <Compile Include="LiveCodingLab\HighlightDifference.cs" />
+    <Compile Include="LiveCodingLab\ILiveCodingLabPane.cs" />
     <Compile Include="LiveCodingLab\LiveCodingLabSettings.cs" />
-    <Compile Include="LiveCodingLab\LiveCodingLab.cs" />
-    <Compile Include="LiveCodingLab\Views\LiveCodingLabSettingsDialogBox.xaml.cs">
-      <DependentUpon>LiveCodingLabSettingsDialogBox.xaml</DependentUpon>
+    <Compile Include="LiveCodingLab\LiveCodingLabMain.cs" />
+    <Compile Include="LiveCodingLab\LiveCodingLabErrorHandler.cs" />
+    <Compile Include="LiveCodingLab\Views\AnimationSettingsDialog.xaml.cs">
+      <DependentUpon>AnimationSettingsDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="LiveCodingLab\Views\LiveCodingLabPane.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LiveCodingLab\Views\LiveCodingLabPane.Designer.cs">
+      <DependentUpon>LiveCodingLabPane.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LiveCodingLab\Views\LiveCodingPaneWPF.xaml.cs">
+      <DependentUpon>LiveCodingPaneWPF.xaml</DependentUpon>
     </Compile>
     <Compile Include="ShapesLab\Views\CustomComboBoxItem.cs" />
     <Compile Include="ShapesLab\Views\CustomMenuItem.cs" />
@@ -1661,9 +1659,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="LiveCodingLab\Views\LiveCodingLabSettingsDialogBox.xaml">
+    <Page Include="LiveCodingLab\Views\AnimationSettingsDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="LiveCodingLab\Views\LiveCodingPaneWPF.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="NarrationsLab\Views\InShowRecordingControl.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -2648,6 +2650,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LiveCodingLab.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LiveCodingLab\Model\" />
+    <Folder Include="LiveCodingLab\Service\" />
+    <Folder Include="LiveCodingLab\Utility\" />
   </ItemGroup>
   <!-- Include the build rules for a C# project. -->
   <PropertyGroup>
