--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -823,6 +823,9 @@
     <Compile Include="LiveCodingLab\Service\LiveCodingLabTextStorageService.cs" />
     <Compile Include="LiveCodingLab\Service\CodeBoxIdService.cs" />
     <Compile Include="LiveCodingLab\Utility\ShapeUtility.cs" />
+    <Compile Include="LiveCodingLab\Views\GroupCodeBoxDialog.xaml.cs">
+      <DependentUpon>GroupCodeBoxDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LiveCodingLab\Views\CodeBoxSettingsDialog.xaml.cs">
       <DependentUpon>CodeBoxSettingsDialog.xaml</DependentUpon>
     </Compile>
@@ -1667,6 +1670,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ELearningLab\Views\AudioSettingsViews\AzureVoiceLoginPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="LiveCodingLab\Views\GroupCodeBoxDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
