Update up and down arrow icons for CodeBoxPaneItem

--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -2113,7 +2113,7 @@
     <None Include="Resources\ImagesLab.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icon-down.png" />
+    <Resource Include="Resources\icon-down.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon-fit.png" />
@@ -2131,7 +2131,7 @@
     <None Include="Resources\icon-right.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icon-up.png" />
+    <Resource Include="Resources\icon-up.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ChoosePicturesIcon.png" />
@@ -2691,6 +2691,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\AnimateNewLines.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\down_arrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\up_arrow.png" />
   </ItemGroup>
   <!-- Include the build rules for a C# project. -->
   <PropertyGroup>
