Add AnimateWordDiff skeleton and GUI button

--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -815,6 +815,7 @@
     <Compile Include="ELearningLab\Service\ELearningService.cs" />
     <Compile Include="ELearningLab\Service\FunctionService\AudioService.cs" />
     <Compile Include="ColorTheme\DesignTheme.cs" />
+    <Compile Include="LiveCodingLab\AnimateWordDiff.cs" />
     <Compile Include="LiveCodingLab\AnimateBlockDiff.cs" />
     <Compile Include="LiveCodingLab\AnimateDiff.cs" />
     <Compile Include="LiveCodingLab\DiffParser\ChunkDiff.cs" />
