--- a/PowerPointLabs/PowerPointLabs/packages.config
+++ b/PowerPointLabs/PowerPointLabs/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Diff.Match.Patch" version="2.1.0" targetFramework="net45" />
   <package id="DiffPlex" version="1.6.3" targetFramework="net45" />
   <package id="ImageProcessor" version="1.9.5.0" targetFramework="net40-Client" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net40-client" />
