--- a/PowerPointLabs/PowerPointLabs/packages.config
+++ b/PowerPointLabs/PowerPointLabs/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Diff.Match.Patch" version="2.1.0" targetFramework="net45" />
   <package id="DiffPlex" version="1.6.3" targetFramework="net45" />
+  <package id="FSharp.Core" version="4.3.1" targetFramework="net45" />
+  <package id="Highlight" version="4.0.0" targetFramework="net45" />
   <package id="ImageProcessor" version="1.9.5.0" targetFramework="net40-Client" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net40-client" />
   <package id="NAudio" version="1.7.1" targetFramework="net40-Client" />
