Implement RefreshAnimation feature to allow users to refresh and recreate all generated animation slides

--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -2745,6 +2745,9 @@
   <ItemGroup>
     <Resource Include="Resources\InsertDiff.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\RefreshAnimation.png" />
+  </ItemGroup>
   <!-- Include the build rules for a C# project. -->
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
