Add functionality where single click on CodeBoxPaneItem will jump to slide and select the associated textbox. Change RadioButton for input type (text/file/diff) to TextBlock for more intuitive usage. Include slide number in CodeBoxPaneItem for easier reference for users. Implement new functionality for Create Text Code Box which preserves animation order for all objects in current slide. Implement new feature Highlight Syntax for users to highlight syntax of regular text boxes.

--- a/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
+++ b/PowerPointLabs/PowerPointLabs/PowerPointLabs.csproj
@@ -837,6 +837,8 @@
     <Compile Include="LiveCodingLab\DiffParser\LineChangeType.cs" />
     <Compile Include="LiveCodingLab\DiffParser\LineDiff.cs" />
     <Compile Include="LiveCodingLab\AnimateLineDiff.cs" />
+    <Compile Include="LiveCodingLab\HighlightSyntax.cs" />
+    <Compile Include="LiveCodingLab\InsertText.cs" />
     <Compile Include="LiveCodingLab\InsertDiff.cs" />
     <Compile Include="LiveCodingLab\AnimateNewLines.cs" />
     <Compile Include="LiveCodingLab\HighlightDifference.cs" />
